# firehose

./: .gitignore  README.md
data/: reviews.json
scraper/: pyproject.toml
scraper/src/firehose_scraper/: android.py  apps.py  ios.py  main.py  normalize.py
scripts/: classify-reviews.js  classify-reviews.mjs  classify-reviews.ts
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppComparisonChart.tsx  CategoryBreakdownChart.tsx  ClientChartWrapper.tsx  Dashboard.tsx  GlobalFilterBar.tsx  KPIStrip.tsx  ReviewsChart.tsx  ReviewsTable.tsx  SentimentTrendChart.tsx  TabbedChartCard.tsx  TopPhrasesPanel.tsx  VolumeSpikesChart.tsx
web/lib/: analytics.ts  filter-context.tsx  reviews.ts  types.ts
